* Support for setting tasks on an ant build
* Build Android apps using ant to avoid eclipse issues
* Created a simple JSON API framework
* Update navigation on mobile to fit on smaller screens
* Group recently used and active projects at the top of the menu
* Add a manual update page for easier upgrading of unreleased versions

* Don't send notifications to disabled accounts
* Re-enable eclipse build handling
* Fixed a lot of authentication based issues 
* Fixed what objects were returned in the XML feeds


2.0-beta2

* Added lint - static code analysis for Android Maven projects
* Add inline setting of milestone and assignee in issue lists
* Allow setting debug option at runtime from admin configuration
* Add quick jump for issue number, filename, account etc in quick search field
* Add grouping of milestones
* Add button to drop issues currenty assigned to you

* Fix issues with animations not working offline
* Fix issue where disabled child projects were still being shown in menu
* Correct issues with subscriptions on addigning issues

2.0-beta1

* Add footer text for email notifications - fixes issue:20
* Update membership and permission screens
* Better styling to burndown legends and headings
* Add an hours with fraction string formatter
* Show accounts their own velocity info

2.0-alpha6

* Add enquiry issue type
* Added scan-build - static code analysis for XCode projects

* Improve interface speed and offline support
* Add test notes to Issue entity
* Log changes made to issue estimates

2.0-alpha5

* Update IRC bot to latest for flood prevention

* Fix email notifications to gmail
* Correct precision of hours in milestone export
* Fix NPE in task render page

2.0-alpha4

* Added Windows support

* Fixed api doc generation for non root filesystems
* Fix updater to pull downloads from GitHub

2.0-alpha3

* Made availabile under the AGPL v3 License
* Better handling of 404 pages and typos in URLs
* Add API documentation generation with doxygen
