@@ -23,7 +23,10 @@
         <table class="info vertical">
           <tr>
             <th class="name" style="width:20%">Id</th>
-            <td wicket:id="name" class="name" style="width:30%">id</td>
+            <td class="name" style="width:30%">
+              <span wicket:id="label">id</span>
+              <input type="text" wicket:id="name" />
+            </td>
             <th class="project" style="width:20%">Project</th>
             <td wicket:id="project" class="project" style="width:30%">project</td>
           </tr>
