@@ -1,0 +1,1 @@
+name.IdPatternValidator = "${input}" is not a valid document name - use only letters, numbers, underscores and full stop.
